# Barbershop_HW

./: .env.example  .gitignore  db.sqlite3  pyproject.toml  requirements.txt
HW/: PYTHON411 HW №23.md  PYTHON411 HW №24.md  PYTHON411 HW №25.md  PYTHON411 HW №26.md
barbershop/: settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  context_processors.py  forms.py  mistral.py  models.py  signals.py  telegram.py  views.py
core/migrations/: 0001_initial.py  0002_alter_master_photo_alter_service_image.py  0003_alter_order_date_updated.py  0004_alter_master_options_alter_order_options_and_more.py  0005_review_ai_status.py  0006_remove_review_ai_status_review_ai_checked_status.py
static/css/: main.css
templates/: base.html  create_order.html  create_review.html  include_menu.html  include_order_card.html  landing.html  order_detail.html  orders_list.html  thanks.html
templates/includes/: menu.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_github_id_alter_profile_telegram_id.py
users/templates/users/: login.html  logout.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile_detail.html  profile_update_form.html  register.html
