[project]
name = "Barbershop_HW"
version = "0.1.0"
description = ""
authors = [
    {name = "ManK0-is-here",email = "zarennyjracok@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
    "mistralai (>=1.9.3,<2.0.0)",
    "python-telegram-bot (>=22.3,<23.0)",
    "requests (>=2.32.4,<3.0.0)",
    "telegram (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
